--- a/src/chrome_ext/_locales/ro/messages.json
+++ b/src/chrome_ext/_locales/ro/messages.json
@@ -1,171 +1,171 @@
 {
-    "extensionName": {
-        "message": "YouTube Video Preview"
-    },
-    "extensionPopupTitle": {
-        "message": "$extensionName$ - setari",
-        "placeholders": {
-            "extensionName": {
-                "content": "YouTube Video Preview"
-            }
-        }
-    },
-    "extensionUpdate": {
-        "message": "$extensionName$ a fost updatata",
-        "placeholders": {
-            "extensionName": {
-                "content": "YouTube Video Preview"
-            }
-        }
-    },
-    "extensionDescription": {
-        "message": "Tine mousul deasupra unui video si o sa poti vedea mai multe imagini ale videoului"
-    },
-    "loading": {
-        "message": "se incarca ..."
-    },
-    "yes": {
-        "message": "da"
-    },
-    "no": {
-        "message": "nu"
-    },
-    "about": {
-        "message": "despre"
-    },
-    "options": {
-        "message": "optiuni"
-    },
-    "settings": {
-        "message": "setari"
-    },
-    "feedback": {
-        "message": "feedback"
-    },
-    "imageTimeLabel": {
-        "message": "Viteza de rotire:"
-    },
-    "imageTimeDescription": {
-        "message": "milisecunde (1000 milisecunde = 1 secunda)"
-    },
-    "ratingHeightLabel": {
-        "message": "Inaltimea barei de rating:"
-    },
-    "ratingHeightDescription": {
-        "message": "px"
-    },
-    "enableRatingViewLabel": {
-        "message": "Vizualizare rating:"
-    },
-    "enableRatingViewTrue": {
-        "message": "activ"
-    },
-    "enableRatingViewFalse": {
-        "message": "inactiv"
-    },
-    "optionShowIconFlagLabel": {
-        "message": "Afiseaza iconita:"
-    },
-    "optionShowIconFlagDesc": {
-        "message": "seteaza daca doresti sa vezi iconita extensiei in omnibox (bara cu url-ul)"
-    },
-    "optionsHideIconConfirmFlagLabel": {
-        "message": "Mesaj de confirmare la ascunderea iconitei:"
-    },
-    "optionsSaveMessage": {
-        "message": "Totul este salvat automat la schimbare"
-    },
-    "feedbackPage": {
-        "message": "<p>$question$</p><br><p>$issue$</p><br><p>$suggestion$</p><br>$contact1$<br>$contact2$",
-        "placeholders": {
-            "question": {
-                "content": "Ai intrebari?"
-            },
-            "issue": {
-                "content": "Ai gasit probleme folosind extensia?"
-            },
-            "suggestion": {
-                "content": "Ai sugestii?"
-            },
-            "contact1": {
-                "content": "Nu exista sa ma contactezi trimitandu-mi un email <a href=\"mailto:darkyndy@gmail.com\">darkyndy@gmail.com</a>"
-            },
-            "contact2": {
-                "content": "sau creeaza un issue la: <a href=\"https://github.com/darkyndy/YoutubeVideoPreview/issues\" target=\"_blank\">GitHub YoutubeVideoPreview issues</a>"
-            }
-        }
-    },
-    "siteAboutHeadline": {
-        "message": "Youtube&trade; Video Preview te ajuta sa decizi daca un video merita a fi vazut inainte sa dai click."
-    },
-    "siteAboutWorksHeadline": {
-        "message": "Functioneaza:"
-    },
-    "siteAboutWorksDesc": {
-        "message": "<li>$link1$</li><li>$link2$</li>",
-        "placeholders": {
-            "link1": {
-                "content": "<a href=\"http://www.youtube.com/\" target=\"_blank\">http://www.youtube.com/</a> (protocol nesecurizat)"
-            },
-            "link2": {
-                "content": "<a href=\"https://www.youtube.com/\" target=\"_blank\">https://www.youtube.com/</a> (protocol securizat)"
-            }
-        }
-    },
-    "siteAboutFeaturesHeadline": {
-        "message": "Caracteristici:"
-    },
-    "siteAboutFeaturesDesc": {
-        "message": "<li>$feature1$</li><li>$feature2$</li><li>$feature3$</li><li>$feature4$</li><li>$feature5$</li><li>$feature6$</li><li>$feature7$</li>",
-        "placeholders": {
-            "feature1": {
-                "content": "Tine mousul deasupra unui video de pe youtube.com si o sa vezi diferite imagini din acel video, asa poti determina daca video merita a fi vazut."
-            },
-            "feature2": {
-                "content": "Sub fiecare video o sa vezi bara de rating, asa poti determina daca video merita a fi vazut."
-            },
-            "feature3": {
-                "content": "Optiune de a schimba viteza de schimbare a imaginilor"
-            },
-            "feature4": {
-                "content": "Optiune de a activa/dezactiva bara de rating"
-            },
-            "feature5": {
-                "content": "Optiune de a afisa/ascunde iconita extensiei din omnibox"
-            },
-            "feature6": {
-                "content": "Optiune de a fi intrebat daca doresti sa ascunzi iconita extensiesi din omnibox"
-            },
-            "feature7": {
-                "content": "Functioneaza in Google Chrome versiunea minima numarul 20."
-            }
-        }
-    },
-    "siteAboutCode": {
-        "message": "Codul extensiei il poti gasi la: <a href=\"https://github.com/darkyndy/YoutubeVideoPreview/tree/master/src/chrome_ext\" target=\"_blank\">Github</a>:"
-    },
-    "popupOptions": {
-        "message": "Optiuni..."
-    },
-    "popupHideIcon": {
-        "message": "Ascunde iconita"
-    },
-    "popupAboutHideIcon": {
-        "message": "YouTube Video Preview va continua sa functiuneze,numai ca iconita din omnibox va disparea"
-    },
-    "popupAreYouSureQuestion": {
-        "message": "Esti sigur?"
-    },
-    "popupHideIconConfirmLabel": {
-        "message": "Nu ma intreba data viitoare"
-    },
-    "popupHideIconOptionsInfoDesc": {
-        "message": "Pentru a afisa iconita dute la:"
-    },
-    "popupHideIconOptionsInfoPath": {
-        "message": "Tools > Extensions > Youtube video preview > Options"
-    },
-    "dummy": {
-        "message": "dummy"
+  "extensionName": {
+    "message": "Video Preview"
+  },
+  "extensionPopupTitle": {
+    "message": "$extensionName$ - setari",
+    "placeholders": {
+      "extensionName": {
+        "content": "Video Preview"
+      }
     }
+  },
+  "extensionUpdate": {
+    "message": "$extensionName$ a fost updatata",
+    "placeholders": {
+      "extensionName": {
+        "content": "Video Preview"
+      }
+    }
+  },
+  "extensionDescription": {
+    "message": "Tine mousul deasupra unui video si o sa poti vedea mai multe imagini ale videoului"
+  },
+  "loading": {
+    "message": "se incarca ..."
+  },
+  "yes": {
+    "message": "da"
+  },
+  "no": {
+    "message": "nu"
+  },
+  "about": {
+    "message": "despre"
+  },
+  "options": {
+    "message": "optiuni"
+  },
+  "settings": {
+    "message": "setari"
+  },
+  "feedback": {
+    "message": "feedback"
+  },
+  "imageTimeLabel": {
+    "message": "Viteza de rotire:"
+  },
+  "imageTimeDescription": {
+    "message": "milisecunde (1000 milisecunde = 1 secunda)"
+  },
+  "ratingHeightLabel": {
+    "message": "Inaltimea barei de rating:"
+  },
+  "ratingHeightDescription": {
+    "message": "px"
+  },
+  "enableRatingViewLabel": {
+    "message": "Vizualizare rating:"
+  },
+  "enableRatingViewTrue": {
+    "message": "activ"
+  },
+  "enableRatingViewFalse": {
+    "message": "inactiv"
+  },
+  "optionShowIconFlagLabel": {
+    "message": "Afiseaza iconita:"
+  },
+  "optionShowIconFlagDesc": {
+    "message": "seteaza daca doresti sa vezi iconita extensiei in omnibox (bara cu url-ul)"
+  },
+  "optionsHideIconConfirmFlagLabel": {
+    "message": "Mesaj de confirmare la ascunderea iconitei:"
+  },
+  "optionsSaveMessage": {
+    "message": "Totul este salvat automat la schimbare"
+  },
+  "feedbackPage": {
+    "message": "<p>$question$</p><br><p>$issue$</p><br><p>$suggestion$</p><br>$contact1$<br>$contact2$",
+    "placeholders": {
+      "question": {
+        "content": "Ai intrebari?"
+      },
+      "issue": {
+        "content": "Ai gasit probleme folosind extensia?"
+      },
+      "suggestion": {
+        "content": "Ai sugestii?"
+      },
+      "contact1": {
+        "content": "Nu exista sa ma contactezi trimitandu-mi un email <a href=\"mailto:darkyndy@gmail.com\">darkyndy@gmail.com</a>"
+      },
+      "contact2": {
+        "content": "sau creeaza un issue la: <a href=\"https://github.com/darkyndy/YoutubeVideoPreview/issues\" target=\"_blank\">GitHub VideoPreview issues</a>"
+      }
+    }
+  },
+  "siteAboutHeadline": {
+    "message": "Video Preview te ajuta sa decizi daca un video merita a fi vazut inainte sa dai click."
+  },
+  "siteAboutWorksHeadline": {
+    "message": "Functioneaza:"
+  },
+  "siteAboutWorksDesc": {
+    "message": "<li>$link1$</li><li>$link2$</li>",
+    "placeholders": {
+      "link1": {
+        "content": "<a href=\"http://www.youtube.com/\" target=\"_blank\">http://www.youtube.com/</a> (protocol nesecurizat)"
+      },
+      "link2": {
+        "content": "<a href=\"https://www.youtube.com/\" target=\"_blank\">https://www.youtube.com/</a> (protocol securizat)"
+      }
+    }
+  },
+  "siteAboutFeaturesHeadline": {
+    "message": "Caracteristici:"
+  },
+  "siteAboutFeaturesDesc": {
+    "message": "<li>$feature1$</li><li>$feature2$</li><li>$feature3$</li><li>$feature4$</li><li>$feature5$</li><li>$feature6$</li><li>$feature7$</li>",
+    "placeholders": {
+      "feature1": {
+        "content": "Tine mousul deasupra unui video de pe youtube.com si o sa vezi diferite imagini din acel video, asa poti determina daca video merita a fi vazut."
+      },
+      "feature2": {
+        "content": "Sub fiecare video o sa vezi bara de rating, asa poti determina daca video merita a fi vazut."
+      },
+      "feature3": {
+        "content": "Optiune de a schimba viteza de schimbare a imaginilor"
+      },
+      "feature4": {
+        "content": "Optiune de a activa/dezactiva bara de rating"
+      },
+      "feature5": {
+        "content": "Optiune de a afisa/ascunde iconita extensiei din omnibox"
+      },
+      "feature6": {
+        "content": "Optiune de a fi intrebat daca doresti sa ascunzi iconita extensiesi din omnibox"
+      },
+      "feature7": {
+        "content": "Functioneaza in Google Chrome versiunea minima numarul 20."
+      }
+    }
+  },
+  "siteAboutCode": {
+    "message": "Codul extensiei il poti gasi la: <a href=\"https://github.com/darkyndy/YoutubeVideoPreview/tree/master/src/chrome_ext\" target=\"_blank\">Github</a>:"
+  },
+  "popupOptions": {
+    "message": "Optiuni..."
+  },
+  "popupHideIcon": {
+    "message": "Ascunde iconita"
+  },
+  "popupAboutHideIcon": {
+    "message": "Video Preview va continua sa functiuneze,numai ca iconita din omnibox va disparea"
+  },
+  "popupAreYouSureQuestion": {
+    "message": "Esti sigur?"
+  },
+  "popupHideIconConfirmLabel": {
+    "message": "Nu ma intreba data viitoare"
+  },
+  "popupHideIconOptionsInfoDesc": {
+    "message": "Pentru a afisa iconita dute la:"
+  },
+  "popupHideIconOptionsInfoPath": {
+    "message": "Tools > Extensions > Video Preview > Options"
+  },
+  "dummy": {
+    "message": "dummy"
+  }
 }
