--- a/src/chrome_ext/_locales/es/messages.json
+++ b/src/chrome_ext/_locales/es/messages.json
@@ -72,6 +72,9 @@
   "optionsHideIconConfirmFlagLabel": {
     "message": "Confirm at hide icon:"
   },
+  "optionsPreviewImageRealSizeFlagLabel": {
+    "message": "Preview image at real dimension:"
+  },
   "optionsSaveMessage": {
     "message": "Everything is automatically saved at change"
   },
