--- a/src/chrome_ext/_locales/ro/messages.json
+++ b/src/chrome_ext/_locales/ro/messages.json
@@ -72,6 +72,9 @@
   "optionsHideIconConfirmFlagLabel": {
     "message": "Mesaj de confirmare la ascunderea iconitei:"
   },
+  "optionsPreviewImageRealSizeFlagLabel": {
+    "message": "Imaginea de preview la dimensiunea reala:"
+  },
   "optionsSaveMessage": {
     "message": "Totul este salvat automat la schimbare"
   },
