--- a/src/chrome_ext/_locales/en/messages.json
+++ b/src/chrome_ext/_locales/en/messages.json
@@ -75,6 +75,12 @@
   "optionsSaveMessage": {
     "message": "Everything is automatically saved at change"
   },
+  "optionRatingDislikeColorLabel": {
+    "message": "Color for rating dislike:"
+  },
+  "optionRatingLikeColorLabel": {
+    "message": "Color for rating like:"
+  },
   "feedbackPage": {
     "message": "<p>$question$</p><br><p>$issue$</p><br><p>$suggestion$</p><br>$contact1$<br>$contact2$",
     "placeholders": {
